--- a/zas-config.json
+++ b/zas-config.json
@@ -17,7 +17,7 @@
         "trait": "trait.php",
         "constantsClass": "const.php",
         "include": "inc.php",
-        "config": "conf",
+        "config": "config.php",
         "actors": {
             "foreground": "php",
             "background": "php"
@@ -31,6 +31,7 @@
         "trait": "/supporters/templates/trait.tpl",
         "constantsClass": "/supporters/templates/const.tpl",
         "setup": "/supporters/templates/setup.tpl",
+        "config": "/supporters/templates/config.tpl",
         "actors" : {
             "foreground": "/supporters/templates/foreground.tpl",
             "background": "/supporters/templates/background.tpl",
