--- a/zas-config.json
+++ b/zas-config.json
@@ -17,7 +17,7 @@
         "trait": "trait.php",
         "constantsClass": "const.php",
         "include": "inc.php",
-        "config": "config.php",
+        "configs": "config.php",
         "actors": {
             "foreground": "php",
             "background": "php"
@@ -30,7 +30,7 @@
         "interface": "/supporters/templates/interface.tpl",
         "trait": "/supporters/templates/trait.tpl",
         "constantsClass": "/supporters/templates/const.tpl",
-        "config": "/supporters/templates/config.tpl",
+        "configs": "/supporters/templates/config.tpl",
         "setup": "/supporters/templates/setup.tpl",
         "actors" : {
             "foreground": "/supporters/templates/foreground.tpl",
@@ -45,7 +45,7 @@
         "interface": "/supporters/interfaces",
         "trait": "/supporters/traits",
         "constantsClass": "/supporters/constants",
-        "config": "/supporters/configs",
+        "configs": "/supporters/configs",
         "actors": {
             "foreground":"/actors/foreground",
             "background":"/actors/background"
